Fix title container alignment

--- a/src/app/invoices-home/invoices-home-tablet.component.css
+++ b/src/app/invoices-home/invoices-home-tablet.component.css
@@ -22,6 +22,6 @@
   }
 
   .title-container{
-    height: 3rem;
+    gap: 6px;
   }
 }
